--- a/lib/arkana/templates/arkana_protocol.swift.erb
+++ b/lib/arkana/templates/arkana_protocol.swift.erb
@@ -4,12 +4,12 @@ import Foundation
 
 public protocol <%= @namespace %>GlobalProtocol {
 <% for secret in @global_secrets %>
-    var <%= secret.protocol_key.camel_case %>: <%= SwiftTemplateHelper.swift_type(secret.type) %> { get }
+    var <%= secret.protocol_key.camel_case %>: <%= SwiftTemplateHelper.swift_type(secret.type) %> { <%= SwiftTemplateHelper.protocol_getter(@swift_declaration_strategy) %> }
 <% end %>
 }
 
 public protocol <%= @namespace %>EnvironmentProtocol {
 <% for secret in @environment_secrets.uniq(&:protocol_key) %>
-    var <%= secret.protocol_key.camel_case %>: <%= SwiftTemplateHelper.swift_type(secret.type) %> { get }
+    var <%= secret.protocol_key.camel_case %>: <%= SwiftTemplateHelper.swift_type(secret.type) %> { <%= SwiftTemplateHelper.protocol_getter(@swift_declaration_strategy) %> }
 <% end %>
 }
