Add platform support for macOS, tvOS and watchOS

--- a/lib/arkana/templates/interfaces.podspec.erb
+++ b/lib/arkana/templates/interfaces.podspec.erb
@@ -12,5 +12,8 @@ Pod::Spec.new do |spec|
   spec.source                = { path: "./" }
   spec.source_files          = 'Sources/**/*.swift'
   spec.ios.deployment_target = '11.0'
+  spec.osx.deployment_target = '11.0'
+  spec.tvos.deployment_target = '11.0'
+  spec.watchos.deployment_target = '4.0'
   spec.swift_version         = '5.0'
 end
