--- a/lib/arkana/templates/package.swift.erb
+++ b/lib/arkana/templates/package.swift.erb
@@ -11,7 +11,7 @@ let package = Package(
         .macOS(.v11),
         .iOS(.v11),
         .tvOS(.v11),
-        .watchOS(.v4)
+        .watchOS(.v4),
     ],
     products: [
         .library(
