Clarify usage of weird characters in general, and add more tests.

--- a/lib/arkana/templates/arkana_tests.swift.erb
+++ b/lib/arkana/templates/arkana_tests.swift.erb
@@ -115,4 +115,8 @@ final class <%= @namespace %>Tests: XCTestCase {
     func test_decodeEnvVarFromDotfile_withDollarSign__andNotEscaped_andNoQuotes_shouldDecodeWithUnexpectedValue() {
         XCTAssertNotEqual(globalSecrets.secretWithDollarSignNotEscapedAndNoQuotesKey, "real_$lim_shady")
     }
+
+    func test_decodeEnvVarFromDotfile_withWeirdCharacters_shouldDecode() {
+        XCTAssertEqual(globalSecrets.secretWithWeirdCharactersKey, "` ~ ! @ # % ^ & * ( ) _ - + = { [ } } | : ; ' < , > . ? /")
+    }
 }
