--- a/lib/arkana/templates/kotlin/build.gradle.kts.erb
+++ b/lib/arkana/templates/kotlin/build.gradle.kts.erb
@@ -7,6 +7,14 @@ plugins {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility = JavaVersion.toVersion("17")
+    targetCompatibility = JavaVersion.toVersion("17")
+}
+
+tasks.test {
+    useJUnitPlatform()
+}
+
+dependencies {
+    testImplementation(kotlin("test"))
 }
