Update Kotlin generator to support KMP projects

--- a/lib/arkana/templates/kotlin/arkana.kt.erb
+++ b/lib/arkana/templates/kotlin/arkana.kt.erb
@@ -13,7 +13,7 @@ object <%= @namespace %> {
         val decoded = encoded.mapIndexed { index, item ->
             (item xor cipher[(index % cipher.size)]).toByte()
         }.toByteArray()
-        return decoded.toString(Charsets.UTF_8)
+        return decoded.decodeToString()
     }
 
     internal fun decodeInt(encoded: List<Int>, cipher: List<Int>): Int {
